[package]
name = "aoc"
version = "0.1.0"
authors = ["Max McCarthy <hello@maxmcc.com>"]
edition = "2018"

[dependencies]
bitflags = "1.2.1"
chrono = "0.4.10"
digits_iterator = "0.1.0"
itertools = "0.8.2"
lazy_static = "1.4.0"
matches = "0.1.8"
num = "0.2"
partial_application = "0.2.0"
rand = "0.7.2"
regex = "1.3.1"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_scan = "0.3.2"
slice-group-by = "0.2.6"

[dev-dependencies]
quickcheck = "0.9.0"
quickcheck_macros = "0.8.0"
